--- a/client/views/artists/edit.html
+++ b/client/views/artists/edit.html
@@ -1,6 +1,8 @@
 <template name="artistEdit">
-	<div class="page-header">
-		<h2>Modifier l'artiste</h2>
+	<div class="container">
+		<div class="page-header">
+			<h2>Modifier l'artiste</h2>
+		</div>
+		{{> artistForm this}}
 	</div>
-	{{> artistForm this}}
 </template>
