--- a/client/views/artists/show.html
+++ b/client/views/artists/show.html
@@ -15,13 +15,11 @@
 	{{/if}}
 
 	<div class="media">
-		<div class="row">
-			<img src="{{artistPicture}}" alt="" class=" img-thumbnail media-object pull-right">
-			<div class="media-body col-sm-6 col-xs-12">
-				<blockquote>
-					<h2 class="media-heading">{{name}}</h2>
-				</blockquote>
-			</div>
+		<img src="{{artistPicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
+		<div class="media-body col-sm-8 col-xs-12">
+			<blockquote>
+				<h2 class="media-heading">{{name}}</h2>
+			</blockquote>
 		</div>
 	</div>
 	<br>
