--- a/client/views/gigs/edit.html
+++ b/client/views/gigs/edit.html
@@ -1,4 +1,8 @@
 <template name="gigEdit">
-	<h2>Modifier l'évènement</h2>
-	{{> gigForm this}}
+	<div class="container">
+		<div class="page-header">
+			<h2>Modifier l'évènement</h2>
+		</div>
+		{{> gigForm this}}
+	</div>
 </template>
