--- a/client/views/gigs/new.html
+++ b/client/views/gigs/new.html
@@ -1,6 +1,6 @@
 <template name="gigNew">
 	<div class="page-header">
-		<h2>Nouvel évènement</h2>
+		<h2>Ajouter un évènement</h2>
 	</div>
 	{{> gigForm}}
 </template>
