--- a/client/views/accounts/login.html
+++ b/client/views/accounts/login.html
@@ -1,41 +1,43 @@
 <template name="login">
-	<div class="page-header">
-		<h2>Connection</h2>
-	</div>
+	<div class="container">
+		<div class="page-header">
+			<h2>Connection</h2>
+		</div>
 
-	<div class="row">
-		<form id="loginForm" class="form-horizontal col-sm-10 col-sm-offset-1" action="" method="POST" role="form" novalidate="novalidate">
-			<legend>Entrez vos identifiants :</legend>
+		<div class="row">
+		<form id="loginForm" class="form-horizontal col-sm-8 col-sm-offset-1 col-xs-10 col-xs-offset-1" action="" method="POST" role="form" novalidate="novalidate">
+				<legend>Entrez vos identifiants :</legend>
 
-			<div class="form-group">
-				<label class="col-sm-3 control-label" for="email">E-mail :</label>
-				<div class="col-sm-5">
-					<input type="text" id="email" name="email" placeholder="votre email" class="form-control" 
-					data-type="email" 
-					data-type-email-message="Adresse email invalide"
-					data-notblank="true" 
-					data-required="true"
-					data-required-message="Email obligatoire"
-					/>
+				<div class="form-group">
+					<label class="col-sm-4 control-label" for="email">E-mail :</label>
+					<div class="col-sm-8">
+						<input type="text" id="email" name="email" placeholder="votre email" class="form-control" 
+						data-type="email" 
+						data-type-email-message="Adresse email invalide"
+						data-notblank="true" 
+						data-required="true"
+						data-required-message="Email obligatoire"
+						/>
+					</div>
 				</div>
-			</div>
 
-			<div class="form-group">
-				<label class="col-sm-3 control-label" for="password">Mot de passe :</label>
-				<div class="col-sm-5">
-					<input type="password" id="password" placeholder="mot de passe" value="" class="form-control"
-					data-type="alphanum" 
-					data-required="true"
-					data-required-message="Mot de passe obligatoire"
-					/>
+				<div class="form-group">
+					<label class="col-sm-4 control-label" for="password">Mot de passe :</label>
+					<div class="col-sm-8">
+						<input type="password" id="password" placeholder="mot de passe" value="" class="form-control"
+						data-type="alphanum" 
+						data-required="true"
+						data-required-message="Mot de passe obligatoire"
+						/>
+					</div>
 				</div>
-			</div>
 
-			<div class="pull-right" style="text-align: right">
-				<button type="submit" class="btn btn-success">Valider</button>
-				<button id="cancel" class="btn btn-default">Annuler</button>
-				<h4 id="error"></h4>
-			</div>
-		</form>
+				<div class="pull-right" style="text-align: right">
+					<button type="submit" class="btn btn-success">Valider</button>
+					<button id="cancel" class="btn btn-default">Annuler</button>
+					<h4 id="error"></h4>
+				</div>
+			</form>
+		</div>
 	</div>
 </template>
