--- a/client/views/artists/form.html
+++ b/client/views/artists/form.html
@@ -1,25 +1,27 @@
 <template name ="artistForm">
-	<form id="artistForm" class="form-horizontal col-sm-8 col-sm-offset-1" action="" method="POST" role="form">
+	<div class="row">
+		<form id="artistForm" class="form-horizontal col-sm-8 col-sm-offset-1 col-xs-10 col-xs-offset-1" action="" method="POST" role="form">
 
-		<div class="form-group">
-			<label class="col-sm-2 control-label" for="name">Nom&nbsp;:</label>
-			<div class="col-sm-8">
-				<input type="text" class="form-control" id="name" placeholder="nom" value="{{name}}">
+			<div class="form-group">
+				<label class="col-sm-4 control-label" for="name">Nom&nbsp;:</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="name" placeholder="nom" value="{{name}}">
+				</div>
 			</div>
-		</div>
 
-		<div class="form-group">
-			<label class="col-sm-2 control-label" for="facebook_id">Facebook&nbsp;:</label>
-			<div class="col-sm-8">
-				<input type="text" class="form-control" id="facebook_id" placeholder="facebook ID" value="{{facebook_id}}">
+			<div class="form-group">
+				<label class="col-sm-4 control-label" for="facebook_id">Facebook Id&nbsp;:</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="facebook_id" placeholder="Facebook Id" value="{{facebook_id}}">
+				</div>
 			</div>
-		</div>
 
-		<br>
+			<br>
 
-		<div class="pull-right">
-			<button type="submit" class="btn btn-success"><i class="fa fa-floppy-o fa-lg"></i>&nbsp;&nbsp;Enregistrer</button>
-			<button type="button" id="cancel" class="btn btn-default">Annuler</a>
-		</div>
-	</form>
+			<div class="pull-right">
+				<button type="submit" class="btn btn-success"><i class="fa fa-floppy-o fa-lg"></i>&nbsp;&nbsp;Enregistrer</button>
+				<button type="button" id="cancel" class="btn btn-default">Annuler</button>
+			</div>
+		</form>
+	</div>
 </template>
