--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -36,6 +36,14 @@
 </template>
 
 <template name="navbar_user_logged_in">
+	<li class="dropdown">
+		<a class="btn btn-primary" data-toggle="dropdown" href="#" style="text-align:left"><i class="fa fa-plus"></i>&nbsp;&nbsp;Ajouter...</a>
+		<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+			<li><a href="{{pathFor 'gigNew'}}">un évènement</a></li>
+			<li><a href="{{pathFor 'artistNew'}}">un artiste</a></li>
+			<li><a href="{{pathFor 'placeNew'}}">un lieu</a></li>
+		</ul>
+	</li>
 	<li>
 		<a id="logout" href="#">
 			<i class="fa fa-power-off">&nbsp;</i>
