--- a/client/views/places/edit.html
+++ b/client/views/places/edit.html
@@ -1,6 +1,8 @@
 <template name="placeEdit">
-	<div class="page-header">
-		<h2>Modifier le lieu</h2>
+	<div class="container">
+		<div class="page-header">
+			<h2>Modifier le lieu</h2>
+		</div>
+		{{> placeForm this}}
 	</div>
-	{{> placeForm this}}
 </template>
