--- a/client/views/places/form.html
+++ b/client/views/places/form.html
@@ -1,34 +1,29 @@
 <template name ="placeForm">
-	<form id="placeForm" class="form-horizontal col-sm-12 col-sm-offset-1" action="" method="POST" role="form">
+	<div class="row">
+		<form id="placeForm" class="form-horizontal col-sm-10 col-sm-offset-0 col-xs-10 col-xs-offset-1" action="" method="POST" role="form">
 
-		<div class="form-group">
-			<label class="col-sm-2 control-label" for="name">Nom&nbsp;:</label>
-			<div class="col-sm-8">
-				<input type="text" class="form-control" id="name" placeholder="nom" value="{{name}}">
+			<div class="form-group">
+				<label class="col-sm-4 control-label" for="name">Nom&nbsp;:</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="name" placeholder="nom" value="{{name}}">
+				</div>
 			</div>
-		</div>
 
-		<div class="form-group">
-			<label class="col-sm-2 col-xs-12 control-label" for="">Adresse&nbsp;:</label>
-			<div class="col-sm-8 col-xs-11">
-				{{#constant}}
-				<div id="map" />
-				{{/constant}}<br>
+			<div class="form-group">
+				<label class="col-sm-4 control-label" for="">Adresse&nbsp;:</label>
+				<div class="col-sm-8">
+					{{#constant}}
+					<div id="map" />
+					{{/constant}}<br>
+				</div>
 			</div>
-		</div>
 
-		<div class="form-group">
-			<label class="col-sm-2 control-label" for="address"></label>
-			<div class="col-sm-10">
-				<input type="hidden" class="form-control" id="address" value="{{address}}">
+			<input type="hidden" class="form-control" id="address" value="{{address}}">
+
+			<div class="pull-right">
+				<button type="submit" class="btn btn-success"><i class="fa fa-floppy-o fa-lg"></i>&nbsp;&nbsp;Enregistrer</button>
+				<button type="button" id="cancel" class="btn btn-default">Annuler</button>
 			</div>
-		</div>
-
-		<br>
-
-		<div class="pull-right">
-			<button type="submit" class="btn btn-success"><i class="fa fa-floppy-o fa-lg"></i>&nbsp;&nbsp;Enregistrer</button>
-			<button type="button" id="cancel" class="btn btn-default">Annuler</button>
-		</div>
-	</form>
+		</form>
+	</div>
 </template>
