--- a/client/css/lamifa.css
+++ b/client/css/lamifa.css
@@ -35,7 +35,7 @@ body {
 /* Not required for template or sticky footer method. */
 
 #wrap > .container {
-	padding: 80px 15px 15px;
+	padding: 100px 15px 15px;
 }
 .container .credit {
 	margin: 20px 0;
@@ -60,4 +60,10 @@ code {
 
 #iron-router-progress {
 	margin-top: 60px;
+}
+
+.list-group-item .media img {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
