--- a/client/views/artists/show.html
+++ b/client/views/artists/show.html
@@ -11,9 +11,11 @@
 				</a>
 			</div>
 			{{/if}}
-			<img src="{{artistPicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
-			<div class="media-body col-sm-8 col-xs-9">
-				<h2 class="media-heading">{{name}}</h2>
+			<div class="media">
+				<img src="{{artistPicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
+				<div class="media-body col-sm-8 col-xs-9">
+					<h2 class="media-heading">{{name}}</h2>
+				</div>
 			</div>
 		</div>
 	</div>
