--- a/client/views/users/user.html
+++ b/client/views/users/user.html
@@ -1,16 +1,24 @@
 <template name="user">
-	<div class="container">
-		<div class="row">
-			<img src="{{currentUserImage}}" alt="Image du profil" class="img-thumbnail">&nbsp;&nbsp;{{currentUser.profile.name}}
-			<div class="rateit"></div>
-			<button type="button" class="btn btn-success"><i class="fa fa-thumbs-up"></i>&nbsp;<strong>Je vote!</strong></button>
-			<div class="checkbox">
-				<small>
-					<label>
-						<input type="checkbox" value="" checked>
-						Publier sur mon mur
-					</label>
-				</small>
+	<div class="row">
+		<div class="container">
+			<div class="media col-sm-6">
+				<img src="{{currentUserImage}}" alt="Image du profil" class="img-rounded pull-left">
+				<div class="media-body">
+					<h4 class="media-heading">{{currentUser.profile.name}}</h4>
+					<div class="input-group">
+						<label>
+							<input type="checkbox" value="">
+							<small>
+								Publier sur mon mur
+							</small>
+						</label>
+					</div>
+				</div>
+				<br>
+			</div>
+			<div class="">
+				<div class="rateit" data-rateit-value="3"></div>&nbsp;&nbsp;
+				<button type="button" class="btn btn-primary"><i class="fa fa-thumbs-up"></i>&nbsp;<strong>Voter</strong></button>
 			</div>
 		</div>
 	</div>
