Places form fixes.

--- a/client/views/places/show.html
+++ b/client/views/places/show.html
@@ -12,8 +12,11 @@
 			</div>
 			{{/if}}
 			<img src="{{placePicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
-			<div class="media-body col-sm-8 col-xs-9">
+			<div class="media-body col-sm-7 col-xs-12">
 				<h2 class="media-heading">{{name}}</h2>
+				<blockquote>
+					<small>{{shortenedAdress address}}</small>
+				</blockquote>
 			</div>
 		</div>
 	</div>
