--- a/client/views/gigs/form.html
+++ b/client/views/gigs/form.html
@@ -22,11 +22,12 @@
 				</div>
 			</div>
 
+
 			<div class="form-group">
 				<label class="col-sm-4 col-xs-12 control-label" for="date">Date&nbsp;:</label>
 				<div class="col-sm-5 col-xs-8">
-					<div class="input-group">
-						<input type="text" class="form-control" id="date" readonly value="{{date_str}}">
+					<div class="input-group" id="date">
+						<input type="text" class="set-due-date form-control" readonly value="{{date_str}}">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 					</div>
 				</div>
