--- a/client/views/gigs/show.html
+++ b/client/views/gigs/show.html
@@ -37,6 +37,12 @@
 	</div>
 	<br>
 
+	{{#if messages}}
+	{{#each messages}}
+	{{>message}}
+	{{/each}}
+	{{/if}}
+
 
 	{{#if currentUser}}
 	{{#unless isAdmin}}
@@ -50,7 +56,8 @@
 			<p>
 				<strong>Merci d'avoir voté!</strong>
 			</p>
-			<button type="button" class="btn btn-default" id="postMessage"><i class="fa fa-pencil-square-o"></i>&nbsp;&nbsp;<strong>Poster un message<strong></button>
+			{{>messageModal}}
+			<button type="button" class="btn btn-default" data-toggle="modal" data-target="#messageModal"><i class="fa fa-pencil-square-o"></i>&nbsp;&nbsp;<strong>Poster un message<strong></button>
 			<button type="button" class="btn btn-primary" id="postPicture"><i class="fa fa-camera"></i>&nbsp;&nbsp;<strong>Poster une photo<strong></button>
 			{{/unless}}
 		</div>
