--- a/client/css/lamifa.css
+++ b/client/css/lamifa.css
@@ -27,6 +27,7 @@ body {
 	height: 60px;
 	background-color: #f5f5f5;
 	padding: 20px 0;
+	text-align: right;
 }
 
 
@@ -64,6 +65,6 @@ code {
 
 .list-group-item .media img {
 	display: block;
-    margin-left: auto;
-    margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
