--- a/client/views/messages/modal.html
+++ b/client/views/messages/modal.html
@@ -7,10 +7,14 @@
 					<h4 class="modal-title">Poster un message</h4>
 				</div>
 				<div class="modal-body">
-					{{>messageForm}}
+					<form id="messageForm" action="" method="POST" role="form">
+						<div class="form-group">
+							<input type="textarea" class="form-control" id="message" placeholder="148 caractères max.">
+						</div>
+					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="submit" class="btn btn-default" data-dismiss="modal" id="postMessage"><strong>Envoyer<strong></button>
+					<button type="submit" class="btn btn-primary" data-dismiss="modal" id="postMessage"><strong>Envoyer<strong></button>
 					<button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
 				</div>
 			</div><!-- /.modal-content -->
