--- a/client/views/users/user.html
+++ b/client/views/users/user.html
@@ -1,22 +1,41 @@
 <template name="userProfile">
-	<div class="media">
-		<img src="{{currentUserImage}}" alt="Image du profil" class="img-rounded pull-left">
-		<div class="media-body">
-			<h4 class="media-heading">{{currentUser.profile.name}}</h4>
+	<div class="container">
+		<div class="media">
+			<img src="{{currentUserImage}}" alt="Image du profil" class="img-rounded pull-left">
+			<div class="media-body">
+				<blockquote>
+					<h5 class="media-heading">
+						<strong>{{currentUser.profile.name}}</strong>
+					</h5>
+					{{#if userHasVoted}}
+					<p>
+						<strong>Merci d'avoir voté !</strong>
+					</p>
+					{{>userActions}}
+					{{>messageModal}}
+					{{else}}
+					{{>userVote}}
+					{{/if}}
+				</blockquote>
+			</div>
 		</div>
 	</div>
 </template>
+
 <template name="userVote">
 	<div class="input-group">
+		<div class="rateit" data-rateit-value="3"></div><br>
+	</div>
+	<small>
 		<label>
 			<input type="checkbox" value="">
-			<small>
-				Publier sur mon mur
-			</small>
+			Publier sur mon mur
 		</label>
-		<div class="rateit" data-rateit-value="3"></div>&nbsp;&nbsp;
-	</div>
-	<button type="button" class="btn btn-primary" id="vote"><i class="fa fa-thumbs-up"></i>&nbsp;<strong>Voter</strong></button>
-	<div class="col-xs-6">
-	</div>
+	</small>
+	<button type="button" class="btn btn-primary" id="vote"><i class="fa fa-thumbs-up"></i>&nbsp;<strong>Voter</strong></button><br>
+</template>
+
+<template name="userActions">
+	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#messageModal"><i class="fa fa-pencil-square-o"></i>&nbsp;&nbsp;<strong>Poster un message<strong></button>
+	<button type="button" class="btn btn-default" id="postPicture"><i class="fa fa-camera"></i>&nbsp;&nbsp;<strong>Poster une photo<strong></button>
 </template>
