Fixed message form submit.

--- a/client/views/messages/show.html
+++ b/client/views/messages/show.html
@@ -1,7 +1,7 @@
 <template name="message">
 	<div class="media">
 		<div class="media-object pull-left">
-			<img src="{{ownerPicture}}" alt="" class="img-rounded"/>
+			<img src="{{ownerPicture}}" alt=""/>
 		</div>
 		<div class="media-body">
 			<h5 class="media-heading">
