--- a/client/views/messages/modal.html
+++ b/client/views/messages/modal.html
@@ -1,23 +1,23 @@
 <template name="messageModal">
 	<div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title">Poster un message</h4>
-				</div>
-				<div class="modal-body">
-					<form id="messageForm" action="" method="POST" role="form">
+			<form id="messageForm" action="" method="POST" role="form">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title">Poster un message</h4>
+					</div>
+					<div class="modal-body">
 						<div class="form-group">
 							<input type="textarea" class="form-control" id="message" placeholder="148 caractères max.">
 						</div>
-					</form>
-				</div>
-				<div class="modal-footer">
-					<button type="submit" class="btn btn-primary" data-dismiss="modal" id="postMessage"><strong>Envoyer<strong></button>
-					<button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-				</div>
-			</div><!-- /.modal-content -->
+					</div>
+					<div class="modal-footer">
+						<button type="submit" class="btn btn-primary"><strong>Envoyer<strong></button>
+						<button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</form>
 		</div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
 </template>
