--- a/client/views/users/user.html
+++ b/client/views/users/user.html
@@ -1,7 +1,7 @@
 <template name="userProfile">
 	<div class="container">
 		<div class="media">
-			<img src="{{currentUserImage}}" alt="Image du profil" class="img-rounded pull-left">
+			<img src="{{currentUserImage}}" alt="Image du profil" class="pull-left">
 			<div class="media-body">
 				<blockquote>
 					<h5 class="media-heading">
