Changed Messages to Comments. Created posts to handle both Comments and Pictures.

--- a/client/views/comments/show.html
+++ b/client/views/comments/show.html
@@ -1,4 +1,4 @@
-<template name="message">
+<template name="comment">
 	<div class="media">
 		<div class="media-object pull-left">
 			<img src="{{ownerPicture}}" alt=""/>
