--- a/client/views/comments/modal.html
+++ b/client/views/comments/modal.html
@@ -1,15 +1,15 @@
-<template name="messageModal">
-	<div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<template name="commentModal">
+	<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
-			<form id="messageForm" action="" method="POST" role="form">
+			<form id="commentForm" action="" method="POST" role="form">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h4 class="modal-title">Poster un message</h4>
+						<h4 class="modal-title">Poster un commentaire</h4>
 					</div>
 					<div class="modal-body">
 						<div class="form-group">
-							<input type="textarea" class="form-control" id="message" placeholder="148 caractères max.">
+							<input type="textarea" class="form-control" id="comment" placeholder="148 caractères max.">
 						</div>
 					</div>
 					<div class="modal-footer">
