--- a/client/views/gigs/show.html
+++ b/client/views/gigs/show.html
@@ -40,13 +40,13 @@
 
 	<div class="row">
 		<div class="container">
-			{{#if messages.count}}
+			{{#if comments.count}}
 			<div class="page-header">
-				<h3>Commentaires :</h3>
+				<h3>Soumis par le public :</h3>
 			</div>
 			<div class="list-group">
-				{{#each messages}}
-				{{>message}}
+				{{#each comments}}
+				{{>comment}}
 				{{/each}}
 			</div>
 			{{else}}
