--- a/client/views/users/user.html
+++ b/client/views/users/user.html
@@ -5,7 +5,7 @@
 			<div class="media-body">
 				<blockquote>
 					<h5 class="media-heading">
-						<strong>{{currentUser.profile.name}}</strong>
+						{{currentUser.profile.name}}
 					</h5>
 					{{#if userHasVoted}}
 					<p>
