--- a/client/views/artists/show.html
+++ b/client/views/artists/show.html
@@ -1,23 +1,30 @@
 <template name="artistShow">
+	{{#if isAdmin}}
+	<div class="pull-right">
+		<a class="btn btn-default btn-sm" href="{{pathFor "artistEdit"}}">
+			<i class="fa fa-wrench fa-2x"></i>
+		</a>
+		<a id="remove" class="btn btn-warning btn-sm" href="#">
+			<i class="fa fa-times fa-2x"></i>
+		</a>
+	</div>
+	{{/if}}
+
 	<div class="row">
-		<div class="container">
-			{{#if isAdmin}}
-			<div class="pull-right">
-				<a class="btn btn-default btn-sm" href="{{pathFor "artistEdit"}}">
-					<i class="fa fa-wrench fa-2x"></i>
-				</a>
-				<a id="remove" class="btn btn-warning btn-sm" href="#">
-					<i class="fa fa-times fa-2x"></i>
-				</a>
-			</div>
-			{{/if}}
+		<div class="media col-xs-12">
 			<img src="{{artistPicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
-			<div class="media-body col-sm-7 col-xs-12">
+			<div class="media-body col-xs-12 col-sm-8">
 				<h2 class="media-heading">{{name}}</h2>
+				<blockquote>
+					<small>
+					</small>
+				</blockquote>
 			</div>
 		</div>
 	</div>
+
 	<br>
+
 	<div class="list-group">
 		{{#each gigs}}
 		{{> gigItem}}
