--- a/client/views/gigs/show.html
+++ b/client/views/gigs/show.html
@@ -1,31 +1,39 @@
 <template name="gigShow">
+	{{#if isAdmin}}
+	<div class="pull-right">
+		<a class="btn btn-default btn-sm" href="{{pathFor "gigEdit"}}">
+			<i class="fa fa-wrench fa-2x"></i>
+		</a>
+		<a id="remove" class="btn btn-warning btn-sm" href="#">
+			<i class="fa fa-times fa-2x"></i>
+		</a>
+	</div>
+	{{/if}}
+
 	<div class="row">
-		<div class="container">
-			{{#if isAdmin}}
-			<div class="pull-right">
-				<a class="btn btn-default btn-sm" href="{{pathFor "gigEdit"}}">
-					<i class="fa fa-wrench fa-2x"></i>
-				</a>
-				<a id="remove" class="btn btn-warning btn-sm" href="#">
-					<i class="fa fa-times fa-2x"></i>
-				</a>
-			</div>
-			{{/if}}
-			<img src="{{gigPicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
-			<div class="media-body col-sm-7 col-xs-12">
+		<div class="media col-xs-12">
+		<img src="{{gigPicture}}" alt="" class="img-thumbnail media-object pull-left" style="margin-bottom:12px">
+			<div class="media-body col-xs-12 col-sm-8">
 				<h2 class="media-heading">
 					{{#with artist}}
 					<a href="{{pathFor "artistShow"}}">{{name}}</a><br>
 					{{/with}}
 				</h2>
 				<blockquote>
-					{{#with place}}
-					<a href="{{pathFor "placeShow"}}">{{name}}</a><br>
-					{{/with}}
-					<small>
-						<i class="fa fa-map-marker"></i>&nbsp;
-						{{shortenedAdress place.address}}
-					</small>
+					<div class="media">
+						<img src="{{placeThumbnail}}" alt="Image du profil" class="media-object pull-left"/>
+						<div class="media-body">
+							<strong class="media-heading">
+								{{#with place}}
+								<a href="{{pathFor "placeShow"}}">{{name}}</a><br>
+								{{/with}}
+							</strong>
+							<small>
+								<i class="fa fa-map-marker"></i>&nbsp;
+								{{shortenedAdress place.address}}
+							</small>
+						</div>
+					</div>
 					<br>
 					<p>
 						<i class="fa fa-calendar"></i>&nbsp;
@@ -38,34 +46,26 @@
 
 	<br>
 
-	<div class="row">
-		<div class="container">
-			{{#if posts.count}}
-			<div class="page-header">
-				<h3>Soumis par le public :</h3>
-			</div>
-			<div class="list-group">
-				{{#each posts}}
-				{{>post}}
-				{{/each}}
-			</div>
-			{{else}}
-			<small>Aucun commentaire pour cet évènement.</small>
-			{{/if}}
-		</div>
+	{{#if posts.count}}
+	<div class="page-header">
+		<strong>Soumis par le public :</strong>
 	</div>
+	<div class="list-group">
+		{{#each posts}}
+		{{>post}}
+		{{/each}}
+	</div>
+	{{else}}
+	<small>Aucun commentaire pour cet évènement.</small>
+	{{/if}}
 
 	{{#if currentUser}}
 	{{#unless isAdmin}}
 	<br>
-	<div class="row">
-		<div class="container">
-			<div class="page-header">
-				<h3>Exprimez-vous !</h3>
-			</div>
-			{{>userProfile}}
-		</div>
+	<div class="page-header">
+		<h3>Exprimez-vous !</h3>
 	</div>
+	{{>userProfile}}
 	{{/unless}}
 	{{/if}}
 </template>
