--- a/client/views/posts/show.html
+++ b/client/views/posts/show.html
@@ -9,7 +9,7 @@
 				"{{content}}"
 				{{/if}}
 				{{#if isPicture}}
-				<img src="{{content}}" alt="" class="col-xs-12">
+				<img src="{{content}}" alt="">
 				{{/if}}
 				{{#with owner}}
 				<small class="">
