Fixed datepicker. Added Posts bonus/malus.

--- a/client/views/posts/show.html
+++ b/client/views/posts/show.html
@@ -11,11 +11,23 @@
 				{{#if isPicture}}
 				<img src="{{content}}" alt="">
 				{{/if}}
-				{{#with owner}}
+				<br>
 				<small class="">
-					<a href="{{pathFor 'userShow'}}"><i>{{profile.name}}</i></a>, {{timeAgo}}.
+					{{#with owner}}
+					<a href="{{pathFor 'userShow'}}"><i>{{profile.name}}</i></a>, {{timeAgo}}
+					{{/with}}
+					{{#unless userHasVoted}}
+					<span>
+						&nbsp;|&nbsp;
+						<a href="#" id="bonus">
+							<i class="fa fa-thumbs-o-up"></i>
+						</a> - 
+						<a href="#" id="malus">
+							<i class="fa fa-thumbs-o-down"></i>
+						</a>
+					</span>
+					{{/unless}}
 				</small>
-				{{/with}}
 			</blockquote>
 		</div>
 	</div>
