--- a/client/views/gigs/form.html
+++ b/client/views/gigs/form.html
@@ -24,12 +24,9 @@
 
 
 			<div class="form-group">
-				<label class="col-sm-4 col-xs-12 control-label" for="date">Date&nbsp;:</label>
-				<div class="col-sm-5 col-xs-8">
-					<div class="input-group" id="date">
-						<input type="text" class="set-due-date form-control" readonly value="{{date_str}}">
-						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-					</div>
+				<label class="col-xs-4 control-label" for="date">Date&nbsp;:</label>
+				<div class="col-xs-8">
+					<div id="date"></div>
 				</div>
 			</div>
 
