Fixed datepicker. Added Posts bonus/malus.

--- a/client/views/users/user.html
+++ b/client/views/users/user.html
@@ -9,7 +9,7 @@
 					</h5>
 					{{#if userHasVoted}}
 					<p>
-						<strong>Merci d'avoir voté !</strong>
+						<strong>Merci d'avoir voté.</strong>
 					</p>
 					{{>userActions}}
 					{{>commentModal}}
