--- a/client/views/users/user.html
+++ b/client/views/users/user.html
@@ -3,10 +3,12 @@
 		<div class="media">
 			<img src="{{currentUserImage}}" alt="Image du profil" class="pull-left">
 			<div class="media-body">
-				<blockquote>
+				<strong>
 					<h5 class="media-heading">
 						{{currentUser.profile.name}}
 					</h5>
+				</strong>
+				<blockquote>
 					{{#if userHasVoted}}
 					<p>
 						<strong>Merci d'avoir voté.</strong>
@@ -24,14 +26,22 @@
 
 <template name="userVote">
 	<div class="input-group">
+		<div class="rating">
+			<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+		</div>
+	</div>
+	
+	<div class="input-group">
 		<div class="rateit" data-rateit-value="3"></div><br>
 	</div>
-	<small>
+	
+	<div class="input-group">
 		<label>
 			<input type="checkbox" value="">
 			Publier sur mon mur
 		</label>
-	</small>
+	</div>
+
 	<button type="button" class="btn btn-primary" id="vote"><i class="fa fa-thumbs-up"></i>&nbsp;<strong>Voter</strong></button><br>
 </template>
 
