Votes and posts.

--- a/client/views/artists/show.html
+++ b/client/views/artists/show.html
@@ -19,6 +19,7 @@
 		</div>
 	</div>
 
+	{{#if gigsToCome.count}}
 	<div class="row">
 		<div class="container">
 			<div class="page-header">
@@ -28,14 +29,14 @@
 				<div class="list-group">
 					{{#each gigsToCome}}
 					{{> gigItem}}
-					{{else}}
-					<small>Aucun évènement à venir.</small>
 					{{/each}}
 				</div>
 			</div>
 		</div>
 	</div>
+	{{/if}}
 
+	{{#if pastGigs.count}}
 	<div class="row">
 		<div class="container">
 			<div class="page-header">
@@ -45,11 +46,10 @@
 				<div class="list-group">
 					{{#each pastGigs}}
 					{{> gigItem}}
-					{{else}}
-					<small>Aucun évènement passé.</small>
 					{{/each}}
 				</div>
 			</div>
 		</div>
 	</div>
+	{{/if}}
 </template>
