--- a/client/views/users/user.html
+++ b/client/views/users/user.html
@@ -10,7 +10,6 @@
 				</strong>
 				<blockquote>
 					{{#if userHasVoted}}
-					<p>
 						<strong>Merci d'avoir voté.</strong>
 					</p>
 					{{>userActions}}
@@ -48,6 +47,6 @@
 </template>
 
 <template name="userActions">
-	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#commentModal"><i class="fa fa-pencil-square-o"></i>&nbsp;&nbsp;<strong>Poster un commentaire<strong></button>
+	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#commentModal"><i class="fa fa-pencil-square-o"></i>&nbsp;&nbsp;<strong>Commenter<strong></button>
 	<button type="button" class="btn btn-default" id="postPicture"><i class="fa fa-camera"></i>&nbsp;&nbsp;<strong>Poster une photo<strong></button>
 </template>
