--- a/client/views/gigs/show.html
+++ b/client/views/gigs/show.html
@@ -58,7 +58,7 @@
 				<div class="panel-body">
 					{{#unless currentUser}}
 					Pour votez et vous exprimer,&nbsp;&nbsp;
-					<a class="btn btn-primary" id="login" href="#"><i class="fa fa-lg fa-facebook-square">&nbsp;&nbsp;</i>Connectez-vous avec Facebook</a>
+					<a class="btn btn-success" id="login" href="#"><i class="fa fa-lg fa-facebook-square">&nbsp;&nbsp;</i>Connectez-vous avec Facebook</a>
 					{{else}}
 					{{#unless isAdmin}}
 					<div class="col-sm-offset-2">
