--- a/client/views/posts/show.html
+++ b/client/views/posts/show.html
@@ -23,7 +23,7 @@
 				{{#unless isAdmin}}
 				{{#unless userHasVoted}}
 				<br>
-				<button id="bonus" type="button" class="btn btn-sm btn-primary">&nbsp;<i class="fa fa-thumbs-o-up"></i>&nbsp;</button>
+				<button id="bonus" type="button" class="btn btn-sm btn-default">&nbsp;<i class="fa fa-thumbs-o-up"></i>&nbsp;</button>
 				<button id="malus" type="button" class="btn btn-sm btn-default">&nbsp;<i class="fa fa-thumbs-o-down"></i>&nbsp;</button>
 				{{/unless}}
 				{{else}}
